--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,6 +1,21 @@
 <h1><%= @list.name %></h1>
 <p>Categoria: <%= @list.category.name %></p>
 
+<div>
+
+    <h2>Itens</h2>
+    <ul>
+        <% @list.items.each do |item| %>
+        <li><%= item.name %></li>
+        <li><%= item.description %>
+        <li>Completado: <%= item.completed ? "Sim" : "Não" %></li>
+        <% end %>
+    </ul>
+
+    <%= link_to "Adicionar item", new_list_item_path(@list) %>
+
+</div>
+
 <%= link_to "Back", lists_path %>
 <%= link_to "Edit", edit_list_path(@list) %>
 <%= button_to "Delete", @list, method: :delete, data: { turbo_confirm: "Tem certeza?" } %>
