--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,21 +1,37 @@
-<h1><%= @list.name %></h1>
-<p>Categoria: <%= @list.category.name %></p>
+<div class="max-w-4xl mx-auto p-6 bg-white shadow rounded-lg space-y-6 w-full">
 
-<div>
+    <h1 class="text-3xl font-bold text-gray-800"><%= @list.name %></h1>
 
-    <h2>Itens</h2>
-    <ul>
+    <p class="text-sm text-gray-500">Categoria: <%= @list.category.name %></p>
+
+    <div class="space-y-4 mt-6">
+        <h2 class="text-2xl font-semibold text-gray-700">Itens</h2>
+
+        <% if @list.items.any? %>
         <% @list.items.each do |item| %>
-        <li><%= item.name %></li>
-        <li><%= item.description %>
-        <li>Completado: <%= item.completed ? "Sim" : "Não" %></li>
+        <%= render 'items/item', item: item, list: @list %>
         <% end %>
-    </ul>
+        <% else %>
+        <p class="text-gray-500">Nenhum item adicionado ainda. Clique em "Adicionar item" para começar.</p>
+        <% end %>
 
-    <%= link_to "Adicionar item", new_list_item_path(@list) %>
+    </div>
 
+    <div class="mt-6 flex justify-end">
+        <%= link_to "Adicionar item", new_list_item_path(@list), 
+        class: "bg-primary hover:bg-primary/80 text-white font-medium py-2 px-4 rounded-lg shadow transition-all" %>
+    </div>
+
+    <div class="flex justify-between items-center mt-6 border-t pt-4">
+        <%= link_to "Voltar", lists_path, 
+        class: "text-primary hover:underline text-sm font-medium" %>
+        <div class="flex space-x-4">
+            <%= link_to "Editar", edit_list_path(@list), 
+          class: "bg-gray-100 hover:bg-gray-200 text-gray-800 font-medium py-2 px-4 rounded-lg transition-all" %>
+            <%= button_to "Excluir", @list, 
+          method: :delete, 
+          data: { turbo_confirm: "Tem certeza?" }, 
+          class: "bg-red-500 hover:bg-red-600 text-white font-medium py-2 px-4 rounded-lg shadow transition-all" %>
+        </div>
+    </div>
 </div>
-
-<%= link_to "Back", lists_path %>
-<%= link_to "Edit", edit_list_path(@list) %>
-<%= button_to "Delete", @list, method: :delete, data: { turbo_confirm: "Tem certeza?" } %>
