--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,4 +1,7 @@
-<h1>Editar Lista</h1>
+<div class="max-w-2xl mx-auto p-6 bg-white shadow rounded-lg space-y-6 w-full">
 
-<%= render "form", list: @list %>
-<%= link_to "Cancel", @list %>
+    <h1 class="text-2xl font-bold text-gray-800">Editar Lista</h1>
+
+    <%= render "form", list: @list %>
+
+</div>
