--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,4 +1,23 @@
-<h1>Editar Categoria</h1>
+<div class="max-w-4xl mx-auto p-6 bg-white shadow rounded-lg space-y-6 w-full">
+    <div class="flex justify-between items-center">
+        <h1 class="text-2xl font-bold text-gray-800">Editar Categoria</h1>
+    </div>
 
-<%= render "form", category: @category %>
-<%= link_to "Cancel", @category %>
+    <div class="p-4 border rounded-lg bg-gray-50 shadow-sm">
+        <%= form_with model: @category, url: category_path(@category), method: :patch, class: "space-y-4" do |form| %>
+        <div>
+            <%= form.label :name, "Nome da Categoria", class: "text-sm font-medium text-gray-700" %>
+            <%= form.text_field :name, 
+            class: "mt-1 block w-full border border-gray-300 rounded-lg p-2 text-gray-900 focus:ring-primary focus:border-primary" %>
+        </div>
+
+        <div class="flex justify-between items-center">
+            <%= link_to "Cancelar", categories_path, 
+            class: "text-primary hover:underline text-sm font-medium" %>
+
+            <%= form.submit "Salvar Alterações", 
+            class: "bg-primary hover:bg-primary/80 text-white font-medium py-2 px-4 rounded-lg shadow transition-all" %>
+        </div>
+        <% end %>
+    </div>
+</div>
