--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,8 +3,13 @@
     <div class="flex flex-row justify-between items-center">
         <h1 class="text-2xl font-bold text-text">Listas</h1>
 
-        <%= link_to "Nova Lista", new_list_path, 
+        <div class="flex flex-row gap-2">
+            <%= link_to "Gerenciar Categorias", categories_path, 
             class: "bg-primary hover:bg-primary/80 text-white px-4 py-2 rounded shadow transition-all" %>
+
+            <%= link_to "Nova Lista", new_list_path, 
+            class: "bg-primary hover:bg-primary/80 text-white px-4 py-2 rounded shadow transition-all" %>
+        </div>
     </div>
 
     <div id="categories" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
