--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -8,7 +8,8 @@
         <div>
             <%= form.label :name, "Nome da Categoria", class: "text-sm font-medium text-gray-700" %>
             <%= form.text_field :name, 
-            class: "mt-1 block w-full border border-gray-300 rounded-lg p-2 text-gray-900 focus:ring-primary focus:border-primary" %>
+                placeholder: "Digite o nome da categoria",
+                class: "mt-1 block w-full border border-gray-300 rounded-lg p-2 text-gray-900 focus:ring-primary focus:border-primary" %>
         </div>
 
         <div class="flex justify-between items-center">
