--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,15 +5,17 @@
     </div>
 
     <div class="p-4 border rounded-lg bg-gray-50 shadow-sm">
-        <%= form_with model: Category.new, url: categories_path, class: "flex space-x-4" do |form| %>
+        <%= form_with model: Category.new, url: categories_path, class: "flex space-x-4 justify-center items-center" do |form| %>
         <div class="flex-grow">
             <%= form.label :name, "Nova Categoria", class: "text-sm font-medium text-gray-700" %>
-            <%= form.text_field :name, 
-            class: "mt-1 block w-full border border-gray-300 rounded-lg p-2 text-gray-900 focus:ring-primary focus:border-primary" %>
-        </div>
-        <div>
-            <%= form.submit "Criar", 
+            <div class="flex flex-row gap-2">
+                <%= form.text_field :name, 
+                    placeholder: "Digite o nome da categoria",
+                    class: "mt-1 block w-full border border-gray-300 rounded-lg p-2 text-gray-900 focus:ring-primary focus:border-primary" %>
+                <%= form.submit "Criar", 
             class: "bg-primary hover:bg-primary/80 text-white font-medium py-2 px-4 rounded-lg shadow transition-all" %>
+            </div>
+
         </div>
         <% end %>
     </div>
