--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -3,6 +3,7 @@
 <div class="flex flex-col">
     <%= form.label :name, class: "text-sm font-medium text-gray-700" %>
     <%= form.text_field :name, 
+        placeholder: "Digite o nome da lista", 
         class: "mt-1 border border-gray-300 rounded-lg p-2 text-gray-900 focus:ring-primary focus:border-primary" %>
 </div>
 
