--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,14 +5,32 @@
 
         <div class="flex flex-row gap-2">
             <%= link_to "Gerenciar Categorias", categories_path, 
-            class: "bg-primary hover:bg-primary/80 text-white px-4 py-2 rounded shadow transition-all" %>
-
+                class: "bg-primary hover:bg-primary/80 text-white px-4 py-2 rounded shadow transition-all" %>
             <%= link_to "Nova Lista", new_list_path, 
-            class: "bg-primary hover:bg-primary/80 text-white px-4 py-2 rounded shadow transition-all" %>
+                class: "bg-primary hover:bg-primary/80 text-white px-4 py-2 rounded shadow transition-all" %>
         </div>
     </div>
 
-    <div id="categories" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+    <div class="p-4 border rounded-lg bg-gray-50 shadow-sm">
+        <%= form_with url: lists_path, method: :get, local: true, class: "flex flex-row gap-4 w-full" do %>
+        <div class="flex flex-row gap-2 w-full">
+            <%= text_field_tag :search_name, params[:search_name], 
+                        placeholder: "Digite o nome da lista", 
+                        class: "border border-gray-300 rounded-lg p-2 text-gray-900 focus:ring-primary focus:border-primary w-full" %>
+
+            <%= select_tag :category_id, 
+                        options_for_select(@categories.map { |c| [c.name, c.id] }, params[:category_id]), 
+                        include_blank: "Selecione uma categoria", 
+                        class: "border border-gray-300 rounded-lg p-2 text-gray-900 focus:ring-primary focus:border-primary w-full" %>
+        </div>
+
+        <div class="flex justify-end">
+            <%= submit_tag "Filtrar", class: "bg-primary hover:bg-primary/80 text-white font-medium py-2 px-4 rounded-lg shadow transition-all" %>
+        </div>
+        <% end %>
+    </div>
+
+    <div id="categories" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-4">
         <% if @lists.any? %>
         <% @lists.each do |list| %>
         <div class="p-4 border rounded shadow cursor-pointer bg-white hover:bg-gray-50 transition-all">
