--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -12,6 +12,11 @@
                 class: "mt-1 block w-full border border-gray-300 rounded-lg p-2 text-gray-900 focus:ring-primary focus:border-primary" %>
         </div>
 
+        <div>
+            <%= form.label :color, "Cor da Categoria", class: "text-sm font-medium text-gray-700" %>
+            <%= form.color_field :color, class: "mt-1 border border-gray-300 rounded-lg p-2 focus:ring-primary focus:border-primary" %>
+        </div>
+
         <div class="flex justify-between items-center">
             <%= link_to "Cancelar", categories_path, 
             class: "text-primary hover:underline text-sm font-medium" %>
