--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,10 +1,15 @@
 <div class="max-w-4xl mx-auto p-6 bg-white shadow rounded-lg space-y-6 w-full">
 
-    <h1 class="text-3xl font-bold text-gray-800"><%= @list.name %></h1>
+    <div class="flex flex-row gap-2 justify-cente items-center">
+        <div class="w-4 h-4 rounded-full" style="background-color: <%= @list.category.color %>" title="<%= @list.category.name %>">
+        </div>
 
-    <p class="text-sm text-gray-500">Categoria: <%= @list.category.name %></p>
+        <h1 class="text-3xl font-bold text-gray-800"><%= @list.name %></h1>
+    </div>
 
-    <div class="space-y-4 mt-6">
+    <p class="text-sm text-gray-500">Categoria: <span style="color: <%= @list.category.color%> "><%= @list.category.name %></span></p>
+
+    <div class=" space-y-4 mt-6">
         <h2 class="text-2xl font-semibold text-gray-700">Itens</h2>
 
         <% if @list.items.any? %>
