--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,24 +1,18 @@
-<div class="p-4 border rounded-lg bg-gray-50 shadow-sm hover:shadow-md transition-all">
+<div class="p-4 border rounded-lg bg-gray-50 shadow-sm hover:shadow-md transition-all relative">
+    <%= form_with url: complete_list_item_path(@list, item), method: :patch, local: true, class: "absolute top-4 right-4" do %>
+    <%= check_box_tag "completed", true, item.completed, 
+            onchange: "this.form.submit()", 
+            disabled: item.completed,
+            class: "w-5 h-5 rounded border-gray-300 text-green-500 focus:ring-green-500" %>
+    <% end %>
 
-    <h3 class="text-lg font-semibold text-gray-800"><%= item.name %></h3>
+    <h3 class="text-lg font-semibold mt-2 <%= item.completed ? 'line-through text-gray-500' : 'text-gray-800' %>">
+        <%= item.name %>
+    </h3>
 
     <p class="text-gray-600 mt-1"><%= item.description %></p>
 
-    <p class="text-sm text-gray-500 mt-2">
-        Completado:
-        <span class="<%= item.completed ? 'text-green-600' : 'text-red-600' %>">
-            <%= item.completed ? 'Sim' : 'Não' %>
-        </span>
-    </p>
-
     <div class="mt-4 flex space-x-4">
-
-        <% unless item.completed %>
-        <%= button_to "Concluir", complete_list_item_path(@list, item), 
-          method: :patch, 
-          class: "bg-green-500 hover:bg-green-600 text-white font-medium py-2 px-4 rounded-lg shadow transition-all" %>
-        <% end %>
-
         <%= link_to 'Editar', edit_list_item_path(@list, item), 
         class: "bg-gray-100 hover:bg-gray-200 text-gray-800 font-medium py-2 px-4 rounded-lg transition-all" %>
 
@@ -26,6 +20,5 @@
         method: :delete, 
         data: { confirm: 'Tem certeza?' }, 
         class: "bg-red-500 hover:bg-red-600 text-white font-medium py-2 px-4 rounded-lg shadow transition-all" %>
-
     </div>
 </div>
