fix: design and button delete

--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -16,9 +16,9 @@
         <%= link_to 'Editar', edit_list_item_path(@list, item), 
         class: "bg-gray-100 hover:bg-gray-200 text-gray-800 font-medium py-2 px-4 rounded-lg transition-all" %>
 
-        <%= link_to 'Excluir', [@list, item], 
+        <%= button_to "Excluir", [@list, item], 
         method: :delete, 
-        data: { confirm: 'Tem certeza?' }, 
+        data: { turbo_confirm: 'Tem certeza?' }, 
         class: "bg-red-500 hover:bg-red-600 text-white font-medium py-2 px-4 rounded-lg shadow transition-all" %>
     </div>
 </div>
