--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -46,7 +46,7 @@
         <% end %>
         <% else %>
         <p class="text-gray-500 text-center col-span-full">
-            Nenhuma lista encontrada. Clique em <strong>Nova Lista</strong> para começar!
+            Nenhuma lista encontrada. Clique em <strong> <%= link_to "Nova Lista", new_list_path%> </strong> para começar!
         </p>
         <% end %>
     </div>
